# cg_mars_lander_ga

./: Cargo.toml  README.md
levels/: 01  02  03  04  05  06  07  08
src/: main.rs
src/display/: args.rs  display.rs  mod.rs
src/ga/: ga.rs  mod.rs
src/game/: game.rs
src/maths/: do_intersect.rs  mod.rs  pos.rs  scale.rs  space.rs  utils.rs
src/parsing/: args.rs  mod.rs  parser.rs
