[package]
name = "cg_mars_lander_ga"
version = "0.1.0"
authors = ["Simon <sgalasso@student.42.fr>"]
edition = "2018"

[dependencies]
piston = "0.52.0"
piston2d-graphics = "0.39.0"
pistoncore-glutin_window = "0.67.0"
piston2d-opengl_graphics = "0.76.0"
rand = "0.8.4"
libc = "0.2.102"
find_folder = "0.3.0"
clap = "2.33.3"